--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,5 +1,5 @@
 @media only screen and (max-width:620px) {
-    .navbar {
+    /* .navbar {
         flex-direction: column;
         text-align: center;
         position: sticky;
@@ -51,7 +51,52 @@
       float: none;
       display: block;
       text-align: left;
+    } */
+    /* .navbar {
+      height: 50px;
     }
+    .navbar-list {
+      display: none;
+    }
+    .navbar-list li.icon {
+      float: right;
+      display: block;
+    }
+    .navbar-list.responsive {position: relative;}
+  .navbar-list.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar-list.responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  } */
+  .navbar {
+    height: 50px;
+  }
+  .navbar-list {
+    display: none;
+  
+  }
+  .navbar-list .icon {
+    float: right;
+    display: block;
+  }
+  .navbar-list.responsive {
+    position: relative;
+  }
+  .navbar-list.navbar-list.responsive.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .navbar-list.navbar-list.responsive {
+    float: none;
+    display: block;
+    text-align: center;
+  }
     .home {
         width: 100%;
         height: 300px;
