--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,5 +1,5 @@
-@media only screen and (max-width:620px) {
-    /* .navbar {
+@media only screen and (max-width: 620px) {
+  /* .navbar {
         flex-direction: column;
         text-align: center;
         position: sticky;
@@ -52,7 +52,7 @@
       display: block;
       text-align: left;
     } */
-    /* .navbar {
+  /* .navbar {
       height: 50px;
     }
     .navbar-list {
@@ -73,12 +73,13 @@
     display: block;
     text-align: left;
   } */
+
+  /* navbar */
   .navbar {
     height: 50px;
   }
   .navbar-list {
     display: none;
-  
   }
   .navbar-list .icon {
     float: right;
@@ -97,344 +98,355 @@
     display: block;
     text-align: center;
   }
-    .home {
-        width: 100%;
-        height: 300px;
-    }
-    .home-text h1 {
-        margin-top: 40px;
-        margin-left: 40px;
-        font-size: 10px;
-        width: 60px;
-    }
-    .home-text h3 {
-        margin-top:10px;
-        margin-left: 40px;
-        font-size: 13px;
-    }
-    .home-text p {
-        margin-left: 40px;
-        margin-top: 5px;
-        font-size: 25px;
-      }
-      .home-text ul {
-        margin-left: 40px;
-      }
-      .home-text ul li {
-        margin-top: 10px;
-        font-size: 13px;
-      }
-      .home-social {
-        width: 200px;
-        height: 50px;
-        margin-top: 10px;
-        margin-left: 28px;
-        border-radius: 4px;
-        padding: 5px;
-        position: relative;
-      }
-      .home-social i {
-          width: 15px;
-          height: 15px;
-          margin-left: 5px;
-      }
-      i.material-icons {
-        font-size: 0.5rem;
-        color: white;
-        position: relative;
-        border-radius: 50%;
-        transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
-      }
-      .home-social i:hover {
-        color: red;
-      }
-      .home-image img {
-        width: 150px;
-        height: 150px;
-        border: rgb(109, 109, 109) outset 15px;
-        border-radius: 50%;
-        margin-top: 80px;
-        margin-left: 10px;
-      }
-      .about {
-          width: 100%;
-          height: 250px;
-      }
-      .about-picture img {
-        width: 150px;
-        margin-left: 40px;
-        margin-top: 10px;
-      }
-      .about-text {
-        margin-top: 20px;
-        margin-left: 10px;
-      }
-      .about-text h1 {
-        font-size: 15px;
-        font-family: Amaranth-Bold;
-      }
-      .about-text p {
-        margin-top: 20px;
-        width: 200px;
-        font-size: 12px;
-        font-family: PollyRounded-Light;
-      }
-      .about-text ul {
-        margin-top: 15px;
-        display: flex;
-        height: 20px;
-        line-height: 10px;
-      }
-      .about-text li {
-        width: 37px;
-        border: red solid 2px;
-        text-align: center;
-        border-radius: 5px;
-        font-family: Amaranth-Regular;
-        cursor: pointer;
-        font-size: 7px;
-      }
-      .btn {
-        background-color: red;
-        border: none;
-        border-radius: 18px;
-        color: white;
-        padding: 8px 20px;
-        cursor: pointer;
-        font-size: 13px;
-        margin-top: 20px;
-        font-family: Amaranth-Regular;
-        -webkit-box-shadow: 0 10px 6px -6px #777;
-        -moz-box-shadow: 0 10px 6px -6px #777;
-        box-shadow: 0 10px 6px -6px #777;
-        transition: 0.3s;
-      }
-      .do {
-          width: 100%;
-          height: 900px;
-      }
-      .do-card {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-      }
-      .do h1 {
-        text-align: center;
-        font-family: Amaranth-Bold;
-        font-size: 22px;
-      }
-      .do-card .card {
-        width: 250px;
-        height: 250px;
-        margin-left: 25px;
-        background-color: white;
-      }
-      .do-card .card h1 {
-        font-family: Amaranth-Bold;
-        margin-top: 30px;
-      }
-      .do-card .card p {
-        width: 200px;
-        font-size: 10px;
-        margin: 0 auto;
-        text-align: center;
-        margin-top: 15px;
-        font-family: PollyRounded-Light;
-        line-height: 1.6;
-      }
-      .skill {
-          width: 100%;
-      }
-      .skill-professional h1 {
-        font-size: 20px;
-      }
-      .skill-technical h1 {
-        font-size: 20px;
-      }
-      .myjavascript {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .javascript {
-        width: 75%;
-        height: 12px;
-        background-color: red;
-        text-align: center;
-        color: white;
-        font-size: 12px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .skill p {
-        margin-left: 35px;
-        font-family: Amaranth-Regular;
-        margin-top: 25px;
-      }
-      .myhtml {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .html {
-        width: 95%;
-        height: 10px;
-        background-color: red;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .mycss {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .css {
-        width: 85%;
-        height: 10px;
-        background-color: red;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .myangular {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .angular {
-        width: 45%;
-        height: 10px;
-        background-color: red;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .mysql {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .sql {
-        width: 40%;
-        height: 10px;
-        background-color: red;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      
-      .mycomm {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .comm {
-        width: 95%;
-        height: 10px;
-        background-color: tomato;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .mywork {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .work {
-        width: 75%;
-        height: 10px;
-        background-color: tomato;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .mymanage {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .manage {
-        width: 85%;
-        height: 10px;
-        background-color: tomato;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .mycreate {
-        width: 75%;
-        background-color: lightgray;
-        margin-left: 30px;
-        border-radius: 10px;
-        margin-top: 8px;
-      }
-      .create {
-        width: 75%;
-        height: 10px;
-        background-color: tomato;
-        text-align: center;
-        color: white;
-        font-size: 10px;
-        border-radius: 10px;
-        padding: 2px;
-      }
-      .experience {
-          height: 800px;
-          flex-direction: column;
-      }
-      .experience-education {
-        text-align: center;
-        font-family: Amaranth-Bold;
-        font-size: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        margin-right: 10px;
-      }
-      .experience-education h4 {
-        margin-right: 180px;
-      }
-      .experience-work h4 {
-        margin-left: 140px;
-      }
-      .slideshow-container {
-          display: none;
-      }
-      .project {
-          display: none;
-      }
 
+  /* home */
+  .home {
+    width: 100%;
+    height: 300px;
+  }
+  .home-text h1 {
+    margin-top: 40px;
+    margin-left: 40px;
+    font-size: 10px;
+    width: 60px;
+  }
+  .home-text h3 {
+    margin-top: 10px;
+    margin-left: 40px;
+    font-size: 13px;
+  }
+  .home-text p {
+    margin-left: 40px;
+    margin-top: 5px;
+    font-size: 25px;
+  }
+  .home-text ul {
+    margin-left: 40px;
+  }
+  .home-text ul li {
+    margin-top: 10px;
+    font-size: 13px;
+  }
+  .home-social {
+    width: 200px;
+    height: 50px;
+    margin-top: 10px;
+    margin-left: 28px;
+    border-radius: 4px;
+    padding: 5px;
+    position: relative;
+  }
+  .home-social i {
+    width: 15px;
+    height: 15px;
+    margin-left: 5px;
+  }
+  i.material-icons {
+    font-size: 0.5rem;
+    color: white;
+    position: relative;
+    border-radius: 50%;
+    transition: color 0.2s ease, background-color 0.2s ease, transform 0.3s ease;
+  }
+  .home-social i:hover {
+    color: red;
+  }
+  .home-image img {
+    width: 150px;
+    height: 150px;
+    border: rgb(109, 109, 109) outset 15px;
+    border-radius: 50%;
+    margin-top: 80px;
+    margin-left: 10px;
+  }
+
+  /* about */
+  .about {
+    width: 100%;
+    height: 250px;
+  }
+  .about-picture img {
+    width: 150px;
+    margin-left: 40px;
+    margin-top: 10px;
+  }
+  .about-text {
+    margin-top: 20px;
+    margin-left: 10px;
+  }
+  .about-text h1 {
+    font-size: 15px;
+    font-family: Amaranth-Bold;
+  }
+  .about-text p {
+    margin-top: 20px;
+    width: 200px;
+    font-size: 12px;
+    font-family: PollyRounded-Light;
+  }
+  .about-text ul {
+    margin-top: 15px;
+    display: flex;
+    height: 20px;
+    line-height: 10px;
+  }
+  .about-text li {
+    width: 37px;
+    border: red solid 2px;
+    text-align: center;
+    border-radius: 5px;
+    font-family: Amaranth-Regular;
+    cursor: pointer;
+    font-size: 7px;
+  }
+  .btn {
+    background-color: red;
+    border: none;
+    border-radius: 18px;
+    color: white;
+    padding: 8px 20px;
+    cursor: pointer;
+    font-size: 13px;
+    margin-top: 20px;
+    font-family: Amaranth-Regular;
+    -webkit-box-shadow: 0 10px 6px -6px #777;
+    -moz-box-shadow: 0 10px 6px -6px #777;
+    box-shadow: 0 10px 6px -6px #777;
+    transition: 0.3s;
+  }
+
+  /* do  */
+  .do {
+    width: 100%;
+    height: 900px;
+  }
+  .do-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .do h1 {
+    text-align: center;
+    font-family: Amaranth-Bold;
+    font-size: 22px;
+  }
+  .do-card .card {
+    width: 250px;
+    height: 250px;
+    margin-left: 25px;
+    background-color: white;
+  }
+  .do-card .card h1 {
+    font-family: Amaranth-Bold;
+    margin-top: 30px;
+  }
+  .do-card .card p {
+    width: 200px;
+    font-size: 10px;
+    margin: 0 auto;
+    text-align: center;
+    margin-top: 15px;
+    font-family: PollyRounded-Light;
+    line-height: 1.6;
+  }
+
+  /* skills  */
+  .skill {
+    width: 100%;
+  }
+  .skill-professional h1 {
+    font-size: 20px;
+  }
+  .skill-technical h1 {
+    font-size: 20px;
+  }
+  .myjavascript {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .javascript {
+    width: 75%;
+    height: 12px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 12px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+  .skill p {
+    margin-left: 35px;
+    font-family: Amaranth-Regular;
+    margin-top: 25px;
+  }
+  .myhtml {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .html {
+    width: 95%;
+    height: 10px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+  .mycss {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .css {
+    width: 85%;
+    height: 10px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+  .myangular {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .angular {
+    width: 45%;
+    height: 10px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+  .mysql {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .sql {
+    width: 40%;
+    height: 10px;
+    background-color: red;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+
+  .mycomm {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .comm {
+    width: 95%;
+    height: 10px;
+    background-color: tomato;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+  .mywork {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .work {
+    width: 75%;
+    height: 10px;
+    background-color: tomato;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+  .mymanage {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .manage {
+    width: 85%;
+    height: 10px;
+    background-color: tomato;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+  .mycreate {
+    width: 75%;
+    background-color: lightgray;
+    margin-left: 30px;
+    border-radius: 10px;
+    margin-top: 8px;
+  }
+  .create {
+    width: 75%;
+    height: 10px;
+    background-color: tomato;
+    text-align: center;
+    color: white;
+    font-size: 10px;
+    border-radius: 10px;
+    padding: 2px;
+  }
+
+  /* experience   */
+  .experience {
+    height: 800px;
+    flex-direction: column;
+  }
+  .experience-education {
+    text-align: center;
+    font-family: Amaranth-Bold;
+    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    margin-right: 10px;
+  }
+  .experience-education h4 {
+    margin-right: 180px;
+  }
+  .experience-work h4 {
+    margin-left: 140px;
+  }
+
+  /* project  */
+  .slideshow-container {
+    display: none;
+  }
+  .project {
+    display: none;
+  }
 }
