styling the experience

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -432,25 +432,193 @@
 
   /* experience   */
   .experience {
-    height: 800px;
-    flex-direction: column;
+    height: 1200px;
+  }
+  .card {
+    width: 280px;
+    height: 170px;
+    background-color: white;
+    margin-top: 20px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+    transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
+  }
+  .card:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
   .experience-education {
-    text-align: center;
-    font-family: Amaranth-Bold;
-    font-size: 20px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-right: 10px;
+    align-items: center;
+  }
+  .experience-education .card-00 h1 {
+    font-family: PollyRounded-Bold;
+    font-size: 15px;
+    margin-top: 15px;
+  }
+  .experience-education .card-00 h2 {
+    font-family: Amaranth-Bold;
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  .experience-education .card-00 h3 {
+    font-family: Amaranth-BoldItalic;
+    margin-top: 10px;
+    font-size: 15px;
+  }
+  .experience-education .card-00 p {
+    font-family: PollyRounded-Thin;
+    margin-top: 10px;
+    font-size: 15px;
+  }
+  
+  .experience-education .card-01 h1 {
+    font-family: PollyRounded-Bold;
+    font-size: 15px;
+    margin-top: 15px;
+  }
+  .experience-education .card-01 h2 {
+    font-family: Amaranth-Bold;
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  .experience-education .card-01 h3 {
+    font-family: Amaranth-BoldItalic;
+    margin-top: 10px;
+    font-size: 15px;
+  }
+  .experience-education .card-01 p {
+    font-family: PollyRounded-Thin;
+    margin-top: 10px;
+    font-size: 15px;
+  }
+  .experience-education .card-02 h1 {
+    font-family: PollyRounded-Bold;
+    font-size: 15px;
+    margin-top: 15px;
+  }
+  .experience-education .card-02 h2 {
+    font-family: Amaranth-Bold;
+    margin-top: 10px;
+    font-size: 20px;
+  }
+  .experience-education .card-02 h3 {
+    font-family: Amaranth-BoldItalic;
+    margin-top: 10px;
+    font-size: 15px;
+  }
+  .experience-education .card-02 p {
+    font-family: PollyRounded-Thin;
+    margin-top: 10px;
+    font-size: 15px;
+  }
+  .experience-work {
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
   }
   .experience-education h4 {
-    margin-right: 180px;
+    display: flex;
+    align-items: center;
+    margin-right: 25px;
   }
   .experience-work h4 {
-    margin-left: 140px;
+    margin: 0 auto;
+    width: 100%;
   }
+  .experience-work .card-04 h1 {
+    font-size: 15px;
+    margin-top: 13px;
+    margin-left: 20px;
+  }
+  .experience-work .card-04 p {
+    font-size: 12px;
+    margin-top: 15px;
+    margin-left: 5px;
+    font-family: Amaranth-Italic;
+  }
+  .experience-work .card-04 h2 {
+    
+    margin-left: 20px;
+    font-family: PollyRounded-Light;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  .experience-work .card-04 h3 {
+  
+    font-size: 13px;
+    margin-left: 20px;
+    font-family: Amaranth-Regular;
+  }
+  .experience-work .card-04 h4 {
 
+    font-size: 13px;
+    margin-top: 10px;
+    font-family: PollyRounded-Light;
+  }
+  .experience-work .card-05 h1 {
+    font-size: 13px;
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+  .experience-work .card-05 p {
+    font-size: 13px;
+    margin-top: 10px;
+  
+    margin-left: 5px;
+    font-family: Amaranth-Italic;
+  }
+  .experience-work .card-05 h2 {
+
+    margin-left: 20px;
+    font-family: PollyRounded-Light;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  .experience-work .card-05 h3 {
+
+    font-size: 13px;
+    margin-left: 20px;
+    font-family: Amaranth-Regular;
+  }
+  .experience-work .card-05 h4 {
+
+    font-size: 13px;
+    margin-left: 20px;
+    font-family: PollyRounded-Light;
+  }
+  
+  .experience-work .card-06 h1 {
+    font-size: 11px;
+    margin-top: 10px;
+
+    margin-left: 20px;
+  }
+  .experience-work .card-06 p {
+    font-size: 9px;
+    margin-top: 11px;
+
+    margin-left: 5px;
+    font-family: Amaranth-Italic;
+  }
+  .experience-work .card-06 h2 {
+    
+    margin-left: 20px;
+    font-family: PollyRounded-Light;
+    font-size: 14px;
+    margin-top: 5px;
+  }
+  .experience-work .card-06 h3 {
+ 
+    font-size: 13px;
+    margin-left: 20px;
+    font-family: Amaranth-Regular;
+  }
+  .experience-work .card-06 h4 {
+
+    font-size: 13px;
+    margin-left: 20px;
+    font-family: PollyRounded-Light;
+  }
+  
   /* project  */
   .slideshow-container {
     display: none;
