adding background effect

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -3,6 +3,7 @@
   height: 600px;
   display: flex;
   background-color: #fbfaff;
+  /* background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg"); */
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
