--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -17,16 +17,18 @@ img {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  /* max-width: 1000px; */
+  width: 100%;
   position: relative;
   margin: auto;
   height: 650px;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
 }
 .mySlide img {
-  margin-left: 90px;
+  margin-left: 290px;
   margin-top: 50px;
   height: 550px;
-  width: 100%;
+  width: 200px;
   border-radius: 10px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5), 0 1px 2px rgba(0, 0, 0, 0.5);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1);
