--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -5,7 +5,9 @@ html {
 .navbar {
   width: 100%;
   display: flex;
-  position: sticky;
+  position: fixed;
+  z-index: 9999;
+  overflow: hidden;
   top: 0;
   background-color: white;
 }
