--- a/assets/css/do.css
+++ b/assets/css/do.css
@@ -1,11 +1,12 @@
 .do {
-  height: 500px;
+  height: auto;
   background-color: #fbfaff;
   background-image: url("https://www.transparenttextures.com/patterns/ag-square.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 }
 .do-card {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 .do h1 {
