--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -1,7 +1,8 @@
 .about {
   width: 100%;
-  height: 500px;
+  height: auto;
   display: flex;
+  flex-wrap: wrap;
   background-color: #fbfaff;
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
@@ -17,6 +18,7 @@
 .about-text {
   flex: 2;
   margin-top: 60px;
+  margin-left: 20px;
 }
 .about-text h1 {
   font-size: 30px;
