--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,7 +1,8 @@
 .home {
   width: 100%;
-  height: 600px;
+  height: auto;
   display: flex;
+  flex-wrap: wrap;
   background-color: #fbfaff;
   /* background-image: url("https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/demo-bg.jpg"); */
   background-image: url("https://www.transparenttextures.com/patterns/asfalt-dark.png");
