--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -4,7 +4,9 @@ html {
 }
 .navbar {
   width: 100%;
+  height: auto;
   display: flex;
+  flex-wrap: wrap;
   position: fixed;
   z-index: 9999;
   overflow: hidden;
