--- a/assets/css/skill.css
+++ b/assets/css/skill.css
@@ -1,6 +1,7 @@
 .skill {
-  height: 500px;
+  height: auto;
   display: flex;
+  flex-wrap: wrap;
   background-color: #fbfaff;
   background-image: url("https://www.transparenttextures.com/patterns/absurdity.png");
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
