linking the animate.css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,4 +10,4 @@
 @import "gallery.css";
 @import "contact.css";
 @import "media.css";
-@import "/assets/animate.css/animate.min.css"
+@import "../animate.css/animate.min.css"
