adding the responsive for the 900px

--- a/assets/css/gallery.css
+++ b/assets/css/gallery.css
@@ -18,6 +18,7 @@ img {
 /* Slideshow container */
 .slideshow-container {
   /* max-width: 1000px; */
+  height: auto;
   width: 100%;
   position: relative;
   /* margin: auto; */
