--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -94,3 +94,25 @@
     width: 550px;
   }
 }
+
+@media screen and (max-width:538px) {
+  #myBtn {
+    bottom: 20px;
+    left: 470px;
+   }
+   .home-text h1  {
+     margin-left: 50px;
+   }
+   .home-text h3  {
+    margin-left: 50px;
+  }
+  .home-text p  {
+    margin-left: 50px;
+  }
+  .home-text ul  {
+    margin-left: 50px;
+  }
+  .home-social {
+    margin-left: 50px;
+  }
+}
