--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -152,3 +152,51 @@
     background-color: white;
   }
 }
+
+@media screen and (max-width:422px) {
+  #myBtn {
+    bottom: 20px;
+    left: 360px;
+   }
+   .card {
+     width: 360px;
+   }
+   .card-06 p {
+     display: none;
+   }
+   .experience-education .card-02 h2 {
+    font-family: Amaranth-Bold;
+    font-size: 25px;
+  }
+  .experience-education .card-00 h2 {
+    font-family: Amaranth-Bold;
+    font-size: 25px;
+  }
+  .do-card .card {
+    width: 350px;
+    height: 370px;
+    margin-top: 30px;
+    margin-left: 25px;
+    background-color: white;
+  }
+  .about-text p {
+    width: 400px;
+  }
+  .about-text ul {
+    margin-top: 30px;
+    display: flex;
+    width: 380px;
+    height: 35px;
+    line-height: 22px;
+  }
+  .about-text li {
+    width: 100px;
+    border: orangered solid 2px;
+    text-align: center;
+    margin-left: 5px;
+    border-radius: 5px;
+    padding: 3px;
+    font-family: Amaranth-Regular;
+    cursor: pointer;
+  }
+}
