--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -362,6 +362,77 @@
   }
 }
 
+@media screen and (max-width:360px) {
+  #myBtn {
+    bottom: 20px;
+    left: 300px;
+   }
+   .card {
+    width: 290px;
+  }
+  .card-06 p {
+    display: none;
+  }
+  .do-card .card {
+    width: 300px;
+    height: 350px;
+    margin-top: 30px;
+    /* margin-left: 25px; */
+    margin-right: 25px;
+    background-color: white;
+  }
+  .experience-education .card-00 h2 {
+   font-family: Amaranth-Bold;
+   /* font-size: 10px; */
+ }
+  .experience-education .card-01 h2 {
+   font-family: Amaranth-Bold;
+   font-size: 20px;
+ }
+  .experience-education .card-02 h2 {
+   font-family: Amaranth-Bold;
+   font-size: 20px;
+ }
+ .experience-education .card-00 h2 {
+   font-family: Amaranth-Bold;
+   font-size: 25px;
+ }
+  .about-text p {
+    width: 290px;
+    margin-right: 20px;
+  }
+  .about-text ul {
+    margin-top: 30px;
+    display: flex;
+    width: 200px;
+    height: 32px;
+    line-height: 20px;
+  }
+  .about-text li {
+    width: 100px;
+    border: orangered solid 2px;
+    text-align: center;
+    margin-left: 5px;
+    border-radius: 5px;
+    padding: 3px;
+    font-family: Amaranth-Regular;
+    cursor: pointer;
+  }
+  .about-download {
+    width: 100%;
+    margin-left: -120px;
+  }
+  .btn {
+    width: 200px;
+  }
+  .home-image img {
+    margin-left: 40px;
+    width: 270px;
+    height: 270px;
+    margin-top: 50px;
+  }
+}
+
 @media screen and (max-width:346px) {
   #myBtn {
     bottom: 20px;
