--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,3 +1,6 @@
+* {
+  box-sizing: border-box;
+}
 .contact {
   height: 600px;
   display: flex;
@@ -43,7 +46,7 @@
   display: none;
   position: fixed;
   bottom: 20px;
-  right: 30px;
+  right: 50px;
   z-index: 99;
   font-size: 15px;
   border: none;
