--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -7,7 +7,6 @@ html {
 }
 .navbar {
   width: 100%;
-  height: 50px;
   display: flex;
   /* flex-wrap: wrap; */
   position: fixed;
@@ -79,4 +78,16 @@ body::-webkit-scrollbar-thumb {
 /* Handle on hover */
 body::-webkit-scrollbar-thumb:hover {
   background: red;
+}
+
+.navbar-toggle {
+  position: absolute;
+  margin-left: 320px;
+  margin-top: 10px;
+}
+.active {
+  display: block;
+}
+.navbar-list {
+  display: block;
 }
