--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -80,14 +80,59 @@ body::-webkit-scrollbar-thumb:hover {
   background: red;
 }
 
+.navba {
+  display: none;
+}
+body {
+  font-family: 'Josefin Sans', sans-serif;
+}
+.navba {
+  font-size: 18px;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 10px;
+  position: sticky;
+  top: 0;
+  z-index: 9999;
+  overflow: hidden
+}
+.navba i {
+  color: black;
+}
+.main-nav {
+  list-style-type: none;
+}
+.nav-links,
+.logo {
+  text-decoration: none;
+  color: black;
+}
+.main-nav li {
+  text-align: center;
+  margin: 15px auto;
+  font-family: Amaranth-Regular;
+}
+.main-nav a {
+  color: white;
+}
+.logo {
+  display: inline-block;
+  font-size: 22px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
 .navbar-toggle {
   position: absolute;
-  margin-left: 320px;
-  margin-top: 10px;
+  top: 10px;
+  right: 20px;
+  cursor: pointer; 
+  color: rgba(255,255,255,0.8);
+  font-size: 24px;
+}
+.main-nav {
+  list-style-type: none;
+  display: none;
 }
 .active {
-  display: block;
-}
-.navbar-list {
   display: block;
 }
