--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -83,6 +83,7 @@ i.material-icons {
   border-radius: 50%;
   margin-top: 90px;
   margin-left: 100px;
+  object-fit: cover;
 }
 
 i.material-icons:after {
