--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -151,6 +151,7 @@
      width: 350px;
      height: 350px;
      margin-top: 50px;
+     object-fit: cover;
    }
    .about-text p {
     width: 450px;
@@ -278,6 +279,7 @@
     width: 300px;
     height: 300px;
     margin-top: 50px;
+    object-fit: cover;
   }
   .home-social {
     margin-left: 20px;
@@ -407,6 +409,7 @@
     width: 270px;
     height: 270px;
     margin-top: 50px;
+    object-fit: cover;
   }
 }
 
@@ -471,6 +474,7 @@
     width: 280px;
     height: 280px;
     margin-top: 50px;
+    object-fit: cover;
   }
   .home-social {
     margin-left: 20px;
@@ -585,6 +589,7 @@
     width: 310px;
     height: 310px;
     margin-top: 50px;
+    object-fit: cover;
   }
   .home-social {
     margin-left: 20px;
@@ -679,6 +684,7 @@
     width: 100%;
     width: 200px;
     height: 180px;
+    object-fit: cover;
   }
   .mySlide img {
     margin-left: 70px;
@@ -811,6 +817,7 @@
     width: 250px;
     height: 250px;
     margin-top: 50px;
+    object-fit: cover;
   }
   .home-social {
     margin-left: 5px;
