--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -33,6 +33,21 @@
   bottom: 20px;
   left: 630px;
  }
+ .btn {
+  background-color: red;
+  border: none;
+  border-radius: 20px;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 15px;
+  font-family: Amaranth-Regular;
+  -webkit-box-shadow: 0 10px 6px -6px #777;
+  -moz-box-shadow: 0 10px 6px -6px #777;
+  box-shadow: 0 10px 6px -6px #777;
+  transition: 0.3s;
+}
+
  .about img {
    display: none;
  }
